--- a/index.html
+++ b/index.html
@@ -145,8 +145,9 @@
         </section>
       </main>
       <footer>
-        <p>&copy; 2025 BrightDays - MIT License</p>
-        <p>Made by ThatSINEWAVE</p>
+        <p>&copy; 2025
+          <a href="https://github.com/ThatSINEWAVE/BrightDays" target="_blank" class="footer-link">BrightDays</a> - MIT License</p>
+        <p>Made with ❤️ by <a href="https://github.com/ThatSINEWAVE" target="_blank" class="footer-link">ThatSINEWAVE</a></p>
       </footer>
     </div>
     <script src="script.js"></script>
