--- a/index.html
+++ b/index.html
@@ -48,11 +48,33 @@
             <h2>Daily Motivation</h2>
           </div>
           <div class="motivation-content">
-            <div class="quote-card">
-              <p id="daily-quote" class="quote-text"></p>
-              <p id="quote-author" class="quote-author"></p>
+            <div class="motivation-tabs">
+              <button id="random-tab" class="motivation-tab active">Daily Quote</button>
+              <button id="favorites-tab" class="motivation-tab">My Favorites</button>
             </div>
-            <button id="new-quote-btn" class="primary-btn">New Quote</button>
+            <!-- Random Quote Section -->
+            <div id="random-section" class="quote-section active">
+              <div class="quote-card">
+                <p id="daily-quote" class="quote-text"></p>
+                <p id="quote-author" class="quote-author"></p>
+                <span id="quote-category" class="quote-category"></span>
+              </div>
+              <div class="quote-actions">
+                <button id="favorite-quote-btn" class="circular-btn">
+                  <i class="far fa-heart"></i>
+                </button>
+                <button id="new-quote-btn" class="primary-btn">New Quote</button>
+                <button id="share-quote-btn" class="circular-btn">
+                  <i class="fas fa-share-alt"></i>
+                </button>
+              </div>
+            </div>
+            <!-- Favorites Section -->
+            <div id="favorites-section" class="quote-section">
+              <div id="favorite-quotes-container" class="favorites-container">
+                <!-- Favorite quotes will be rendered here -->
+              </div>
+            </div>
           </div>
         </section>
         <!-- Weather Mood Section -->
@@ -145,9 +167,9 @@
         </section>
       </main>
       <footer>
-        <p>&copy; 2025
-          <a href="https://github.com/ThatSINEWAVE/BrightDays" target="_blank" class="footer-link">BrightDays</a> - MIT License</p>
-        <p>Made with ❤️ by <a href="https://github.com/ThatSINEWAVE" target="_blank" class="footer-link">ThatSINEWAVE</a></p>
+        <p>&copy; 2025 <a href="https://github.com/ThatSINEWAVE/BrightDays" target="_blank" class="footer-link">BrightDays</a> - MIT License </p>
+        <p>Made with ❤️ by <a href="https://github.com/ThatSINEWAVE" target="_blank" class="footer-link">ThatSINEWAVE</a>
+        </p>
       </footer>
     </div>
     <script src="script.js"></script>
