Updated Weather Mood section

--- a/index.html
+++ b/index.html
@@ -92,6 +92,34 @@
                   <p id="current-temp">--°C</p>
                 </div>
               </div>
+              <!-- Added Weather Details Grid -->
+              <div class="weather-details-grid">
+                <div class="weather-detail-item">
+                  <i class="fas fa-wind"></i>
+                  <span>Wind</span>
+                  <p id="wind-speed">-- m/s</p>
+                </div>
+                <div class="weather-detail-item">
+                  <i class="fas fa-tint"></i>
+                  <span>Humidity</span>
+                  <p id="humidity">--%</p>
+                </div>
+                <div class="weather-detail-item">
+                  <i class="fas fa-compress-alt"></i>
+                  <span>Pressure</span>
+                  <p id="pressure">-- hPa</p>
+                </div>
+                <div class="weather-detail-item">
+                  <i class="fas fa-cloud"></i>
+                  <span>Cloud Cover</span>
+                  <p id="cloud-cover">--%</p>
+                </div>
+              </div>
+              <!-- Weather Forecast -->
+              <div class="weather-forecast">
+                <h3>Forecast</h3>
+                <div id="forecast-container" class="forecast-items"></div>
+              </div>
               <div class="weather-mood">
                 <h3>Today's Mood Suggestion</h3>
                 <p id="mood-suggestion">Please allow location access for personalized suggestions.</p>
